fixed styling to display correctly on smaller screens.

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ button {
 }
 
 #footer {
-  position: fixed;
+  /* position: fixed; */
   bottom: 30px;
   width: 100%;
 }
@@ -62,8 +62,8 @@ button {
   font-size: 1.35em;
   font-style: italic;
   font-weight: 500;
-  width: 26%;
+  width: 35%;
   margin-left: auto;
   margin-right: auto;
-  padding: 35px 50px 50px;
+  padding: 25px 40px 40px;
 }
